--- a/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_Foreign_l_english.yml
@@ -40,31 +40,31 @@ SNUBBED_JAPAN:0 "Snubbed us!"
 TRM_crackdown:0 "Korean Issue"
 
 ### World Tension ###
-backed_down:0 "Backed down"
-sakoku:0 "Second Sakoku"
-jap_rus_peace_2_no:0 "Conference of Perm"
-jap_rus_peace_2:0 "Treaty of Perm"
-jap_rus_peace_1_no:0 "Conference of Okhotsk"
-jap_rus_peace_1:0 "Treaty of Okhotsk"
-jap_rus_coa:0 "Conference of Vladivostok"
-kor_block_end:0 "Ended the blockade"
-kor_block:0 "Blockaded Korea"
-invade_hawaii:0 "Invasion of Hawaii"
-JAP_SUN_THREAT:0 "The Sun has risen!"
-JAP_FNG_exploit_threat:0 "Manchurian Exploitation"
-JAP_railway_demand_land:0 "Territorial Demands"
-JAP_railway_demand_money:0 "Monetary Demands"
-JAP_railway_war:0 "The Railway War"
-jap_back_down:0 "Backed Down"
-JAP_accepted_offer:0 "Accepted Mediation"
-QIE_COMPROMISE:0 "The Beijing Compromise"
-JAP_treaty_signed_qin:0 "Treaty of Qingdao"
-JAP_treaty_refuse_qin:0 "Refused Treaty"
+backed_down:0 "일보 후퇴"
+sakoku:0 "제 2차 쇄국"
+jap_rus_peace_2_no:0 "페름 회담"
+jap_rus_peace_2:0 "페름 조약"
+jap_rus_peace_1_no:0 "오호츠크 회담"
+jap_rus_peace_1:0 "오호츠크 조약"
+jap_rus_coa:0 "블라디보스토크 회담"
+kor_block_end:0 "봉쇄 중단"
+kor_block:0 "한반도 봉쇄"
+invade_hawaii:0 "하와이 침공"
+JAP_SUN_THREAT:0 "욱일 승천!"
+JAP_FNG_exploit_threat:0 "만주 개발"
+JAP_railway_demand_land:0 "영토 요구"
+JAP_railway_demand_money:0 "통화 개혁 요구"
+JAP_railway_war:0 "철도 전쟁"
+jap_back_down:0 "일보 후퇴"
+JAP_accepted_offer:0 "중재 수락"
+QIE_COMPROMISE:0 "베이징 합의"
+JAP_treaty_signed_qin:0 "칭다오 조약"
+JAP_treaty_refuse_qin:0 "조약 파기"
 
 ### Factions ###
-co_prosperity_sphere:0 "Co-Prosperity Sphere"
-japan_research_name:0 "Rikagaku Kenkyusho"
-japan_research_desc:0 "Rikagaku Kenkyusho is the scientific wing of the Co-prosperity sphere aimed at helping enriching our colonies and allies."
+co_prosperity_sphere:0 "공영권"
+japan_research_name:0 "이화학 연구소"
+japan_research_desc:0 "이화학 연구소는 공영권 내의 식민지와 동맹국의 질적 향상을 꾀하는 과학기관입니다."
 
 ### Tooltips ###
 can_blockade_kor:0 "We should consider moving our fleets to our Korean bases to blockade the rebels"
@@ -76,7 +76,7 @@ colonise_taiwan:0 "§GWe will begin to encourage colonisation of Taiwan, this wi
 colonise_start:0 "§GWe will begin preparations for our colonisation efforts.§!"
 
 ### Ideas ###
-JAP_rising_sun:0 "The Rising Sun"
+JAP_rising_sun:0 "떠오르는 해"
 JAP_rising_sun_desc:0 "It is time for Japan to finally seize its place among the empires, and liberate the east from the evil clutches of the white devils! The sun has risen!"
 fengtian_exploitation:0 "Mantetsu Dividends"
 fengtian_exploitation_desc:0 "With its de-facto monopoly on large portions of Fengtian's economy, Mantetsu creates enormous profits, and benefits Japan both through dividends from government-owned shares and direct tax revenue."
@@ -114,19 +114,19 @@ JAP_SUN_GERMAN_ULT:0 "Issue Colonial Ultimatum"
 JAP_SUN_GERMAN_ULT_desc:0 "With the recent war that sparked between Germany and the Internationale, we could use the opportunity to claim our rightful role as the sole great power in Asia and in the Pacific: we must demand all German Pacific possessions as well as their Chinese concessions. If they don't meet our demands... Well... They just can't fight a war in Europe and Asia at the same time, can they?"
 
 ### Focuses - Foreign - Factions ###
-JAP_own_faction:0 "Found Co-prosperity Sphere"
+JAP_own_faction:0 "공영권 설립"
 JAP_own_faction_desc:0 "An alliance of Asian nations to oppose Western Imperialism is not a new idea, but now we cannot afford to stand alone. We must found the Co-prosperity Sphere in order to strengthen our position."
-JAP_create_riken:0 "Create Rikagaku Kenkyusho"
+JAP_create_riken:0 "이화학 연구소 설립"
 JAP_create_riken_desc:0 "Rikagaku Kenkyusho, often shortened to 'Riken', has long been among Japan's leading Research and Development institutes. If we provide the funding, it can begin overseas initiatives, and function as a scientific wing of the Co-prosperity sphere aimed at aiding our colonies and allies."
 
 ### Focuses - Foreign - Colonialism ###
-JAP_SUN_COLONY:0 "Nanshin-ron"
+JAP_SUN_COLONY:0 "남진론"
 JAP_SUN_COLONY_desc:0 "For all its strengths, Japan has a key strategic disadvantage in its dependency on foreign oil. In the pursuit of self-reliance and security against ever-encroaching Western imperialism, surely it would be both wise and just to acquire these resources for ourselves, and in so-doing widen our sphere of security?"
-JAP_demand_indonesia:0 "Demand Indonesia!"
+JAP_demand_indonesia:0 "인도네시아 요구!"
 JAP_demand_indonesia_desc:0 "For centuries Indonesia has toiled under the oppression of Dutch colonial rule, and its vast resources lining European pockets. This injustice must end, we must liberate these resources for the co-prosperity sphere, where they rightfully belong!"
-JAP_SUN_HAW_annex:0 "Annex Hawaii!"
+JAP_SUN_HAW_annex:0 "하와이 합병!"
 JAP_SUN_HAW_annex_desc:0 "Now that the American position in the pacific is weakened we can make our move to annex Hawaii and open a path to the Americas."
-JAP_SUN_HAW_alliance:0 "Alliance with Hawaii?"
+JAP_SUN_HAW_alliance:0 "하와이 동맹?"
 JAP_SUN_HAW_alliance_desc:0 "After the secession of Hawaii in the wake of the American civil war new opportunities were opened for us in the east. Let us offer an alliance to the Hawaiian government."
 JAP_SUN_PHIL_fold:0 "Bring the Philippines Into the Fold!"
 JAP_SUN_PHIL_fold_desc:0 "Now that the imperialists are gone, we can send our gunboats to secure the islands for the Co-Prosperity Sphere, to ensure that they stay that way. Of course, the Filipinos might not see it that way."
@@ -134,14 +134,14 @@ JAP_SUN_PHIL_invite:0 "Alliance with the Philippines?"
 JAP_SUN_PHIL_invite_desc:0 "Now that the Philippines are independent from western imperialism we can invite them to join our prosperity sphere to liberate the rest of Asia from the Western barbarians!"
 
 ### Focuses - Foreign - Russia/Mongolia ###
-JAP_go_north:0 "Hokushin-ron"
+JAP_go_north:0 "북진론"
 JAP_go_north_desc:0 "The Russian bear has loomed in the north for decades, and it is only a matter of time before the Mad Baron spreads destruction once again. It is time to push forward, and end the facade of peace."
-JAP_SUN_RUSSIA:0 "Operation Kuma"
+JAP_SUN_RUSSIA:0 "작전명 쿠마"
 JAP_SUN_RUSSIA_desc:0 "On the Northern frontier lies Russia. It is a land ruled by fools and defended by peasants, but dangerous nonetheless. We must incorporate the North and defeat our old enemy once and for all!"
 #JAP_SUN_RUSSIA_desc:0 "To the north of us there is a great untamed land, ripe for the taking. It is a land ruled by warlords, with bandits and criminals sowing chaos amid rich provinces. We must bring order to the north to protect our influence."
-#JAP_SIBERIA:0 "Invade Siberia"
+#JAP_SIBERIA:0 "시베리아 침공"
 #JAP_SIBERIA_desc:0 "The lands of Siberia have seceded from Russia, and are now standing alone and isolated. It would be the perfect time to launch an invasion to secure the north."
-JAP_Mongolia:0 "Operation Kamikaze"
+JAP_Mongolia:0 "작전명 카미카제"
 JAP_Mongolia_desc:0 "The Mongolian steppes are controlled by the mad baron, a bloodthirsty butcher who threatens the stability of the region."
 
 #Don't know where the hell this is from: jap_ino_demand:0 "After the end of the Dutch colonial regime, Indonesia became a 'free' nation, trying to navigate the cruel ocean that is sovereignty. In reality, Indonesia is nothing more than an artificial byproduct of western imperialism. Let us end this pointless charade and bring the Indonesians into the fold!"
