--- a/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
@@ -1,38 +1,38 @@
 ﻿l_english:
 
 ### Ideas ###
-TRIAD_POWER:0 "Triad Power Increase"
-TARIFF_INCR:0 "Tariff Increase"
-big_ears_donation:0 "Big Ears' Donation"
-CRIMINAL_NET_BRK_UP:0 "Breaking Criminal Networks"
-ECO_PROBLEMS:0 "Economic Problems"
-PROFF_LEG_CITIES:0 "Profits from Legation Cities"
-INVEST_SEIZED_YOU:0 "Legation Cities Investments Seized"
-INVEST_SEIZED_YOU_COMP:0 "Legation Cities Investments Seized"
-INVEST_SEIZED:0 "Legation Cities Investments Seized"
-INVEST_SEIZED_COMP:0 "Legation Cities Investments Seized"
+TRIAD_POWER:0 "삼합회 영향력 증가세"
+TARIFF_INCR:0 "관세 증가"
+big_ears_donation:0 "귀밝이 기부"
+CRIMINAL_NET_BRK_UP:0 "범죄 세력 일소"
+ECO_PROBLEMS:0 "경제난"
+PROFF_LEG_CITIES:0 "공사관 도시의 이윤"
+INVEST_SEIZED_YOU:0 "공사관 도시 투자 점유"
+INVEST_SEIZED_YOU_COMP:0 "공사관 도시 투자 점유"
+INVEST_SEIZED:0 "공사관 도시 투자 점유"
+INVEST_SEIZED_COMP:0 "공사관 도시 투자 점유"
 
 ### Parties ###
 LEC_totalist_party:0 "CCP"
-LEC_totalist_party_long:0 "Cities Communist Party"
+LEC_totalist_party_long:0 "도시 공산당"
 LEC_radical_socialist_party:0 "CRP"
-LEC_radical_socialist_party_long:0 "Cities Radical Party"
+LEC_radical_socialist_party_long:0 "도시 급진당"
 LEC_syndicalist_party:0 "CSP"
-LEC_syndicalist_party_long:0 "Cities Syndicalist Party"
+LEC_syndicalist_party_long:0 "도시 생디칼리즘당"
 LEC_social_democrat_party:0 "SDL"
-LEC_social_democrat_party_long:0 "Social Democratic League"
+LEC_social_democrat_party_long:0 "사회민주연맹"
 LEC_social_liberal_party:0 "SLL"
-LEC_social_liberal_party_long:0 "Social Liberal League"
+LEC_social_liberal_party_long:0 "사회자유연맹"
 LEC_market_liberal_party:0 "MLL"
-LEC_market_liberal_party_long:0 "Market Liberal League"
-LEC_social_conservative_party:0 "Intellectualists"
-LEC_social_conservative_party_long:0 "Intellectualist Faction"
+LEC_market_liberal_party_long:0 "시장자유연맹"
+LEC_social_conservative_party:0 "지식인"
+LEC_social_conservative_party_long:0 "지식인파"
 LEC_authoritarian_democrat_party:0 "IP"
-LEC_authoritarian_democrat_party_long:0 "Imperial Party"
+LEC_authoritarian_democrat_party_long:0 "근왕당"
 LEC_paternal_autocrat_party:0 "CA"
-LEC_paternal_autocrat_party_long:0 "Concordia Association"
+LEC_paternal_autocrat_party_long:0 "만주국 협화회"
 LEC_national_populist_party:0 "CAC"
-LEC_national_populist_party_long:0 "Cities Administrative Committee"
+LEC_national_populist_party_long:0 "도시 행정 위원회"
 
 ### Opinion Modifiers ###
 LEC_TRIAD_POWER:0 "Triads in Power"
