--- a/Kaiserreich Korean Translation/localisation/KR_Ausgleich_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ausgleich_l_english.yml
@@ -377,47 +377,47 @@ ausgleich.78.a:0 "만세!"
 ### Greeks ###
 
 ### Occupation of Kefalonia ###
-ausgleich.80.t:0 "Kefalonia is cut off from supply!"
-ausgleich.80.d:0 "The Greek island of Kefalonia, given to Austria after the first World War, has been cut off from supply, leaving it poorly defended against foreign occupation."
-ausgleich.80.a:0 "This could be bad..."
+ausgleich.80.t:0 "케팔로니아의 보급로 차단되다!"
+ausgleich.80.d:0 "세계 대전에서 오스트리아가 얻은 그리스의 섬 케팔로니아. 이곳의 보급로가 끊기고 말았습니다. 계속 방치된다면 외세의 점령 시도를 막아내기 어려울 것입니다."
+ausgleich.80.a:0 "상황이 좋지 않다..."
 
-ausgleich.81.t:0 "Occupy Kefalonia?"
-ausgleich.81.d:0 "The Greek island of Kefalonia, given to Austria after the first World War, has been cut off from supply, leaving it poorly defended against foreign occupation."
-ausgleich.81.a:0 "On wards to Kefalonia!"
-ausgleich.81.b:0 "Maybe this is a bad idea"
+ausgleich.81.t:0 "케팔로니아 점령?"
+ausgleich.81.d:0 "세계 대전에서 오스트리아가 얻은 그리스의 섬 케팔로니아. 이곳의 보급로가 끊기고 말았습니다. 계속 방치된다면 외세의 점령 시도를 막아내기 어려울 것입니다."
+ausgleich.81.a:0 "케팔로니아로 전진!"
+ausgleich.81.b:0 "아무래도 좋은 생각은 아니다"
 
-ausgleich.82.t:0 "Greece occupies Kefalonia!"
-ausgleich.82.d:0 "Greece has occupied the island of Kefalonia! There is nothing we can do, we do not the ability or resources to wage an overseas invasion."
-ausgleich.82.a:0 "We don't need that rock anyway!"
+ausgleich.82.t:0 "그리스, 케팔로니아를 점령하다!"
+ausgleich.82.d:0 "그리스가 케팔로니아 섬을 점령했습니다. 손쓸 방도가 없습니다. 그럴 여력도, 해외의 침공에 대비할 자원도 없습니다."
+ausgleich.82.a:0 "그런 바윗돌은 필요치도 않았다!"
 
 ### Montenegro ###
-ausgleich.85.t:0 "Montenegrians demand independence!"
-ausgleich.85.d:0 "With Austria engaged in lengthy war, some Montenegrian separatists saw this as a chance to break from the indivisible Habsburg Empire. Their numbers are too large for local garrisons and police forces to crush. We can either bring larger military units to fight with them, or give them, what they want."
-ausgleich.85.a:0 "Let them go"
-ausgleich.85.b:0 "Fight to maintain unity of Empire!"
+ausgleich.85.t:0 "몬테네그로인들이 독립을 요구하다!"
+ausgleich.85.d:0 "오스트리아가 직면한 이 기나긴 전쟁에서, 합스부르크 제국에서 이탈할 기회를 모색하는 일부 몬테네그로 분리주의자들이 있습니다. 지역 주둔군과 경찰력으로 진압하기에는 그 수가 너무 많습니다. 그만한 수의 군 병력을 증원해 싸우거나, 저들이 원하는 바를 들어줄 수도 있습니다."
+ausgleich.85.a:0 "하게 두어라"
+ausgleich.85.b:0 "제국의 통합을 위한 싸움이다!"
 
-ausgleich.86.t:0 "Freedom at last"
-ausgleich.86.d:0 "After years of Austrian occupation we are finally free! Never shall we bow before foreign occupiers!"
-ausgleich.86.a:0 "We will be independent or die!"
+ausgleich.86.t:0 "값진 자유"
+ausgleich.86.d:0 "수 년에 걸친 오스트리아의 점령에서 마침내 자유로워졌습니다! 더는 외세에 고개 조아리지 않을 것입니다!"
+ausgleich.86.a:0 "자유가 아니면 죽음을!"
 
-ausgleich.87.t:0 "Freedom at last"
-ausgleich.87.d:0 "The Habsburg empire that is facing many external threats had no choice but to submit before the rightful demands of the Montenegrian nation. We are free once more!"
-ausgleich.87.a:0 "We are free now!"
+ausgleich.87.t:0 "값진 자유"
+ausgleich.87.d:0 "수없는 대외적 위협을 직면한 합스부르크 제국에게 선택의 여지가 없었습니다. 몬테네그로인들의 국가라는 정당한 요구를 무시할 여지 말입니다. 우리는 다시 한번 자유로워졌습니다!"
+ausgleich.87.a:0 "이제 자유다!"
 
-ausgleich.90.t:0 "Montenegro still exists!"
-ausgleich.90.d:0 "Even the concentration of our armed forces could not break apart the rebellious state of Montenegro. Some members of the general staff suggests that continuing with this fruitless effort greatly weakens our armed forces so that they may be unable to defend our independence from greater powers. Shall we recognise independence of Montenegro?"
-ausgleich.90.a:0 "Recognise their independence"
-ausgleich.90.b:0 "Peace? Never!"
+ausgleich.90.t:0 "몬테네그로는 현존한다!"
+ausgleich.90.d:0 "심기일전한 우리의 국군이 투입되었지만 몬테네그로의 반군 정권은 무너뜨리지 못했습니다. 참모진 중 일부는 헛수고를 지속해 국군을 약체화시키면, 강대국들로부터 우리의 독립을 지키지 못하게 될 것이라는 이야기를 했습니다. 몬테네그로의 독립을 이해해야 할까요?"
+ausgleich.90.a:0 "저들의 독립을 이해하자"
+ausgleich.90.b:0 "평화? 안 돼!"
 
 ausgleich.91.t:0 "Montenegrian revolution"
-ausgleich.91.d:0 "After years of Croatian occupation, the people of Montenegro have decided to throw off the shackles of Croatian oppression and fight for their freedom. This is indeed a great opportunity to weaken the hated Dual Monarchy which is currently ripped apart by raging civil war."
-ausgleich.91.a:0 "Send them everything they need!"
-ausgleich.91.b:0 "Ally with Montenegro"
-ausgleich.91.c:0 "It is too risky"
+ausgleich.91.d:0 "크로아티아 치하 몇 년간, 몬테네그로의 사람들은 크로아티아인들의 억압적인 족쇄를 벗어던지고 자유를 쟁취하기 위해 싸웠습니다. 이것은 맹렬한 내전 속에 찣기고 만 증오스러운 이중 왕조를 약화시킬 훌륭한 기회일 지도 모릅니다."
+ausgleich.91.a:0 "필요로 하는 건 전부 보내주자!"
+ausgleich.91.b:0 "몬테네그로와 동맹"
+ausgleich.91.c:0 "너무 위험하다"
 
-ausgleich.92.t:0 "Serbian help arrives"
-ausgleich.92.d:0 "Our Serbian brothers decided to send us some supplies, weapons and volunteers. With their help we are much close to retain our independence before Austrian invasion."
-ausgleich.92.a:0 "Hurrah!"
+ausgleich.92.t:0 "세르비아의 지원군 도착"
+ausgleich.92.d:0 "우리의 세르비아 형제들이 보급품, 무기와 자원병을 조금 보내주었습니다. 이 도움 덕분에 오스트리아의 침략으로부터 독립을 지킬 열망에 더 가까워졌습니다."
+ausgleich.92.a:0 "만세!"
 
 ### Claim Transylvania ###
 ausgleich.95.t:0 "Claim Transylvania?"
