--- a/Kaiserreich Korean Translation/localisation/KR_World_Tension_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_Tension_l_english.yml
@@ -1,31 +1,31 @@
 ﻿l_english:
 
-second_american_civil_war_threat:0 "Start of the Second American Civil War"
-second_russian_civil_war_threat:0 "Start of the Second Russian Civil War"
-spanish_civil_war_threat:0 "Start of the Spanish Civil War"
-second_weltkrieg_threat:0 "Start of the Second Weltkrieg"
-rise_mongol_empire_threat:0 "Rise of the Mongol Empire"
-fourth_balkan_war_threat:0 "Start of the Fourth Balkan War"
-mitteleuropa_revolt_threat:0 "Revolt in the Mitteleuropa"
+second_american_civil_war_threat:0 "제 2차 미국 내전 발발"
+second_russian_civil_war_threat:0 "제 2차 러시아 내전 발발"
+spanish_civil_war_threat:0 "스페인 내전 발발"
+second_weltkrieg_threat:0 "제 2차 세계 대전 발발"
+rise_mongol_empire_threat:0 "몽골 제국의 발흥"
+fourth_balkan_war_threat:0 "제 4차 발칸 전쟁 발발"
+mitteleuropa_revolt_threat:0 "중앙유럽공동체 반란"
 
-worldtension.1.t:0 "World Tension Has Increased!"
-worldtension.1.d:0 "With the start of the Second Weltkrieg, world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.1.a:0 "How could we let this happen..."
-worldtension.2.t:0 "World Tension Has Increased!"
-worldtension.2.d:0 "With the start of the second American Civil War , world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.2.a:0 "How could we let this happen..."
-worldtension.3.t:0 "World Tension Has Increased!"
-worldtension.3.d:0 "With the start of the Russian Civil War, world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.3.a:0 "How could we let this happen..."
-worldtension.4.t:0 "World Tension Has Increased!"
-worldtension.4.d:0 "With the start of the Spanish Civil War, world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.4.a:0 "How could we let this happen..."
-worldtension.5.t:0 "World Tension Has Increased!"
-worldtension.4.d:0 "With the rise the the mad baron, world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.5.a:0 "How could we let this happen..."
-worldtension.6.t:0 "World Tension Has Increased!"
-worldtension.6.d:0 "With the start of the Fourth Balkan War, world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.6.a:0 "How could we let this happen..."
-worldtension.7.t:0 "World Tension Has Increased!"
-worldtension.7.d:0 "With the start the Lithuania Revolt, world stability has decreased. Already world leaders are looking to further militarise there nations, for good or for ill. They do not care if it was our fault, they simply know that war is coming."
-worldtension.7.a:0 "How could we let this happen..."
+worldtension.1.t:0 "세계 긴장도 상승!"
+worldtension.1.d:0 "제 2차 세계 대전이 발발하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.1.a:0 "어쩌면 좋을까..."
+worldtension.2.t:0 "세계 긴장도 상승!"
+worldtension.2.d:0 "제 2차 미국 내전이 발발하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.2.a:0 "어쩌면 좋을까..."
+worldtension.3.t:0 "세계 긴장도 상승!"
+worldtension.3.d:0 "제 2차 러시아 내전이 발발하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.3.a:0 "어쩌면 좋을까..."
+worldtension.4.t:0 "세계 긴장도 상승!"
+worldtension.4.d:0 "스페인 내전이 발발하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.4.a:0 "어쩌면 좋을까..."
+worldtension.5.t:0 "세계 긴장도 상승!"
+worldtension.4.d:0 "미친 남작이 눈을 뜨며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.5.a:0 "어쩌면 좋을까..."
+worldtension.6.t:0 "세계 긴장도 상승!"
+worldtension.6.d:0 "제 4차 발칸 전쟁이 발발하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.6.a:0 "어쩌면 좋을까..."
+worldtension.7.t:0 "세계 긴장도 상승!"
+worldtension.7.d:0 "리투아니아 반란이 발생하며 세계의 안정도가 하락했습니다. 좋은 의도로나, 나쁜 의도로나 각국 지도자들은 이미 자국의 무장을 실시했습니다. 우리의 잘못으로 일어난 것인지는 신경쓰지 않을 것입니다. 저들은 그저 전쟁을 대비할 뿐입니다."
+worldtension.7.a:0 "어쩌면 좋을까..."
