--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -284,9 +284,9 @@ FRA_inter_coop_desc:0 "우리의 전문 기술은 세계 최고 중 하나이지
 FRA_war_eco_agri: "전시 경제와 농업"
 FRA_war_eco_agri_desc:0 "자크 도리오는 코뮌의 새 경제 장관입니다. 그는 소렐주의자로, 농업의 야심찬 발전과 함께 전시 경제로의 빠른 전환을 주장하는 그의 '전쟁, 경제 및 농업'이론의 지지자입니다. 독일의 반동군이 공격하면, 우리는 분명히 소총과 빵을 이용하게 될 것입니다."
 FRA_modern_farms: "현대 농장"
-FRA_modern_farms_desc:0 "농업은 고대부터 문명의 필수 요소 였지만, 단지 한 세기 만에 근본적으로 변했습니다. 트랙터와 같은 최근 도구를 사용하면 한 명의 농부가 하루에 수십 명의 농부와 몇주가 필요한 농장을 수확 할 수 있습니다. 우리 농장을 기계화하고 우리의 식탁과 식량에 더 많은 음식을 추가합시다."
+FRA_modern_farms_desc:0 "농업은 고대부터 문명의 필수 요소 였지만, 단지 한 세기 만에 근본적으로 변했습니다. 트랙터와 같은 최근 도구를 사용하면 한 명의 농부가 하루에 수십 명의 농부와 몇주가 필요한 농장을 수확 할 수 있습니다. 우리 농장을 기계화하고 우리의 식탁과 식량에 더 많은 음식을 추가합시다
 FRA_war_industry: "전쟁 산업"
-FRA_war_industry_desc:0 "독일에서의 적대감에도 불구하고 우리 경제는 여전히 대부분 민간 상품 생산에 전념하고 있으며 주요 전쟁에 적합하지 않습니다. 외부 위협으로부터 효율적으로 코뮌을 방어하려면 군대과 장비 생산을 개발해야합니다."
+FRA_war_industry_desc:0 "독일의 적대에도 불구하고 우리 경제는 여전히 대부분 민간 상품 생산에 전념하고 있으며 주요 전쟁에 적합하지 않습니다. 외부 위협으로부터 효율적으로 코뮌을 방어하려면 군대과 장비 생산을 개발해야합니다."
 FRA_mass_production: "대량 생산"
 FRA_mass_production_desc:0 "우리의 적은 많으며 결과적으로 우리 군대는 상당히 큽니다. 이 군대는 장비가 많이 필요하며, 이것은 분명히 우리 공장에 부담이됩니다. 우리는 모서리를 자르지 않고 디자인과 제조를 통해 소형 무기 생산을 개선 할 수있는 새로운 방법을 모색해야합니다."
 FRA_cooperatives: "협동 조합"
@@ -327,17 +327,17 @@ FRA_flexible_support_desc:0 "우리 분대의 효율성을 보장하기 위해, 
 FRA_empower_rifleman:0 "보병에게 권한 부여"
 FRA_empower_rifleman_desc:0 "궁극적으로 우리는 세계의 모든 계획을 수립하고 우리가 적합하다고 생각하는대로 뒷전에 많은 포들을 쌓을 수 있지만, 보병만이 전쟁에서 승리 할 수 있는 사람입니다. 그들이 독립적으로 주도권을 확보 할 수 있게함으로써 모든 분대의 효율성을 미묘하게 향상시키고 우리를 공격하는 적들을 물리 칠 수 있습니다."
 FRA_mass_conscription:0 "대규모 징집"
-FRA_mass_conscription_desc:0 "세계 대전은 현대 전쟁이 이제는 완전히 미친 규모로 진행되며 모든 면에서 싸우는 수백만 명의 계획을 작성해야 한다는 것을 의심의 여지없이 보여주었습니다. 모든 프랑스 인은 어느날이라도, 자신이 사랑하는 나라를 반동주의자들로부터 방어하기 위해 부름을받을 수 있음을 알아야합니다. 우리의 마지막 국민이 죽을 때에 만 패배 할 것입니다!"
+FRA_mass_conscription_desc:0 "세계 대전은 현대 전쟁이 이제는 완전히 미친 규모로 진행되며 모든 면에서 싸우는 수백만 명의 계획을 작성해야 한다는 것을 의심의 여지없이 보여주었습니다. 모든 프랑스 인은 어느날이라도, 자신이 사랑하는 나라를 반동주의자들로부터 방어하기 위해 부름을받을 수 있음을 알아야합니다. 우리의 마지막 국민이 죽을 때에 패배 할 것입니다!"
 FRA_improve_manufactures:0 "제조 개선"
 FRA_improve_manufactures_desc:0 "전쟁은 엄청난 규모를 일어났고, 그런 현대 전쟁은 우리가 아직 짐작조차 할 수없는 많은 양의 장비를 필요로 할 것입니다.장비에는 라이플과 수류탄에 탱크와 비행기가 추가되었고, 더 많은것이 추가될 수 있습니다. 우리는 군사 산업이 가능한 최선일 수 있도록해야합니다. 우리는 결코 너무 많은 소총을 가지지 않을 것입니다!"
 FRA_global_organization:0 "전역 조직"
 FRA_global_organization_desc:0 "거대한 군대는 거대한 사령부가 필요합니다. 그러나 이는 파리의 전쟁실에 앉아 지도에 화살을 그리는 옛날의 사령부가 아닙니다. 그것은 모든 분대, 모든 연대, 모든 군대 및 모든 전선의 장교입니다. 모두 함께, 이들은 우리 군대를 이끌고, 커다란 전쟁에서 우리의 궁극적인 승리를 보장 할 것입니다."
 FRA_mass_fire_support:0 "대량 화력 지원"
-FRA_mass_fire_support_desc:0 "거대한 군대와 함께 오래된 화력 지원 개념에 대한 새로운 아이디어가 나왔습니다. 오랫동안 포병만으로 추진력을 유지할 수 있다고 생각되었지만 앞으로 전진할 사람들을 위해 포격을 제공하는 것은 공격하지 않는 모든 분대의 의무라고 생각합니다. 이렇게하면, 우리의 원수들은 우리가 전진 할 때까지 영원히 오리를 멈출 것입니다."
+FRA_mass_fire_support_desc:0 "거대한 군대와 함께 오래된 화력 지원 개념에 대한 새로운 아이디어가 나왔습니다. 오랫동안 포병만으로 추진력을 유지할 수 있다고 생각되었지만 앞으로 전진할 사람들을 위해 포격을 제공하는 것은 공격하지 않는 모든 분대의 의무라고 생각합니다. 이렇게하면, 우리의 원수들은 우리가 전진 할 때까지 영원히 참호 안에서 처 박혀 있을 것입니다."
 FRA_grand_army_reform:0 "육군 개혁"
 FRA_grand_army_reform_desc:0 "우리 군대는 이제 목적과 교리에 통합되었습니다. 더 이상 누구도 그들을 민병대 또는 거리의 군중이라고 부르지 않습니다. 우리의 군대는 Grande Armée의 이미지로 돌아갔으며 실제로 우리가 자랑스러워하는 유산입니다. 우리 군대 전체 조직이 많은 군인들과 장교들을 다루는 방향으로 향하게 해야합니다."
 
-FRA_equipment_modern: "현대화된 장"
+FRA_equipment_modern: "현대화된 장비"
 FRA_equipment_modern_desc:0 "The tools of war are ever improving, more efficient, more deadly. To some, this is a tragedy, but it is clear that we cannot shun them. War is an ugly reality, and we must face it. By ensuring our equipment is always the best, we make conflicts deadlier, perhaps. But our enemies will not spare us the courtesy of using those weapons on us."
 FRA_special_forces:0 "산악 부대"
 FRA_special_forces_desc:0 "Mountains have always been a radically different environment to fight in, and most of our borders cross mountains. We must ensure that our training of mountain forces is spotless, and that every new piece of equipment we invent is adapted to mountain warfare. Mountain artillery exists, perhaps mountain tanks soon will?"
