--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -330,49 +330,49 @@ RUS_tsar_party:0 "RMS"
 RUS_tsar_party_long:0 "Russkyi Monarchicheskyi Soyuz"
 
 ### Focuses ###
-RUS_KRSKY:0 "President Kerensky"
+RUS_KRSKY:0 "케렌스키 대통령"
 RUS_KRSKY_desc:0 "President Kerensky has governed our nation for over twenty years, through two wars. It's amazing that he has managed to survive all the attempts on his life."
 unlock_focuses:0 "§GThis focus will eventually be automatically bypassed and will unlock the other focuses§! \n"
 can_only_take_one_path:0 "§GYou can only take one of the paths to reform the government, choose wisely!§! \n"
 can_only_take_one_path_kornilov:0 "§Gif you didn't choose Savinkov this choice won't be definitive.§! \n"
 
-RUS_CON_MON:0 "Create a Constitutional Monarchy!"
+RUS_CON_MON:0 "입헌군주정을 설립하자!"
 RUS_CON_MON_desc:0 "While the autocratic rule of a Tsar turned out to not offer stability in the long run, but rather bloody revolts and coups, perhaps Russia is ready for a new Romanov, supported by a strong constitution."
 con_mon_tooltip:0 "§RThis will invite the legitimate Tsar Kirill to be the head of a new constitutional monarchy.§! \n"
 unlock_conmon:0 "Baron Wrangel has seized power §Yor§! President Dmitri is in power §Yor§! Milyukov is the head of government §Yor§! Tsereteliy is the head of government"
-RUS_TSAR_KYR:0 "Invite The Legitimate Tsar!"
+RUS_TSAR_KYR:0 "정통성 있는 차르를 초대하자!"
 RUS_TSAR_KYR_desc:0 "The last thirty years of unrest has proved once and for all that the Russian people would be better off governed by an Ironfisted Tsar than through muddled elections and public unrest. What better option than the former Naval Officer Kirill Vladimirovich?"
 unlock_tsarkyr:0 "Baron Wrangel has seized power §Yor§! President Dmitri is in power §Yor§! Savinkov has seized power"
 tsar_kyr_tooltip:0 "§RThis will invite the legitimate Tsar Kirill to be the head of a new autocracy.§! \n"
-RUS_TSAR_DMI:0 "Crown Dmitri as The New Tsar and Autocrat!"
+RUS_TSAR_DMI:0 "새로운 차르이자 전제 군주로 드미트리에게 왕위를 주자!"
 RUS_TSAR_DMI_desc:0 "The Romanovs ruled Russia for over three-hundred years. The chaos that followed must come to an end, the sooner the better. The Grand Duke Dmitri, First cousin to the last Tsar, must now ascend the Imperial throne and restore Russian greatness and glory once and for all."
 tsar_dmi_tooltip:0 "§RThis will crown grand duke Dmitri Romanov as the head of a new autocracy.§! \n"
 unlock_tsardmi:0 "President Dmitri is in power §Yor§! Savinkov has seized power"
 
-RUS_ARI_REP:0 "A Republic of Aristocrats!"
+RUS_ARI_REP:0 "귀족 공화정!"
 RUS_ARI_REP_desc:0 "The power should be transferred from the duma to the senate. Guided by a strong man, we can heed the wishes of the people while still preventing radical movements from siezing power. Who better a president than Grand duke Dmitri?"
 ari_rep_tooltip:0 "§RThis will maintain Dmitri as the president of an aristocratic republic mainly managed by the Senate.§! \n"
 unlock_arirep:0 "President Dmitri is in power"
-RUS_DEM_REP:0 "A Democratic Republic!"
+RUS_DEM_REP:0 "민주 공화정!"
 RUS_DEM_REP_desc:0 "The greatest sin of the nation of Russia was that it never fully managed to democratise itself after the Russian civil war. We need to further liberalise our nation, our economy and our people if we are to save ourselves from tyrants, from both left and right."
 dem_rep_tooltip:0 "§RThis will maintain and politically liberalise the republic as it is.§! \n"
 unlock_demrep:0 "The Senate is still in power §Yor§! the Popular Front government came to power"
-RUS_reinforce_kornilov:0 "Reinforce Kornilov's Authority"
+RUS_reinforce_kornilov:0 "코르닐로프의 권력을 강화하자"
 RUS_reinforce_kornilov_desc:0 "After a daring coup Kornilov, the experienced general of the civil war, has fashioned himself the head of the Russian state. It's been some months now and Kornilov is now in position to reinforce his power over the republic."
 kornilov_focus_tooltip:0 "§RKornilov will continue with a military dictatorship.§!\n"
 unlock_kornilov_focus:0 "Kornilov has seized power"
-RUS_vozhd:0 "Savinkov is the new Vozhd!"
+RUS_vozhd:0 "사빈코프가 새로운 보즈드다!"
 RUS_vozhd_desc:0 "After the death of our leader Lavr Kornilov, his influential prime minister and revolutionary Savinkov has assumed power in the Republic and declared himself the Vozhd of the Russian nation, surpassing the level of power even the old Tsars had. Boris Savinkov is now the Vozhd, the leader of our nation."
 unlock_savinkov_focus:0 "Savinkov is the head of government and Kornilov isn't capable of assuming his post"
 vozhd_focus_tooltip:0 "§RSavinkov will officially be made the new Vozhd of the Republic.§!\n"
-RUS_MIL_DICT:0 "A Military Dictatorship"
+RUS_MIL_DICT:0 "군사 독재정"
 RUS_MIL_DICT_desc:0 "The army has always been a stabilising force in Russia, even after it was stripped of its powers by the weak liberal republic they remained strong to protect Russia. It's only justice to give them the effective control of Russia now, only the army can put itself above all national disputes."
 MIL_DICT_focus_tooltip:0 "§RRussia shall be a military dictatorship!§!\n"
 unlock_milgov:0 "Wrangel is the head of state §Yor§! Savinkov is not the head of government and Kornilov isn't capable of assuming his post"
 
-RUS_SOVIET:0 "Restore the Proletarian Dictatorship!"
-RUS_SOVIET_desc:0 "With men who are loyal to the workers, not the old elite, in charge, it's time to restore the damages caused by the failed government of Kerensky."
-rus_soviet_tooltip:0 "§RYOU WILL SWITCH TO SOVIET RUSSIA \nThis will create a proletarian dictatorship similar to the one who sadly disappeared more than 15 years ago.§! \n"
+RUS_SOVIET:0 "프롤레타리아 독재정을 복원하자!"
+RUS_SOVIET_desc:0 "구 엘리트들이 아닌 노동자들에게 충실한 사람들이 담당해 케렌스키 정부의 실패로 인한 피해를 복구 할 때입니다."
+rus_soviet_tooltip:0 "§R당신은 소비에트 러시아로 변경될 것입니다 \n이는 15년 전에 안타깝게 사라졌던 것과 비슷한 프롤레타리아 독재 정권을 설립할 것입니다.§! \n"
 rus_unlock_soviet_tt:0 "Bukharin is the head of government §Yor§! Tsereteliy is the head of government §Yor§! the Popular Front government came to power"
 
 RUS_DEM_ADM1:0 "Rely on the Village Communes"
